Reetan.Nayak Dev 25/force-app/main/default/objects/Authentication__c/Authentication__c.object-meta.xml
<CustomObject>
    <label>Authentication</label>
    <nameField>
        <label>Authentication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Authentication</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>