Reetan.Nayak Dev 25/force-app/main/default/objects/Authentication__c/fields/Change_Password__c.field-meta.xml
<CustomField>
    <fullName>Change_Password__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Password</label>
    <type>Checkbox</type>
</CustomField>