Reetan.Nayak Dev 25/force-app/main/default/objects/Authentication__c/fields/UpdatedBy__c.field-meta.xml
<CustomField>
    <fullName>UpdatedBy__c</fullName>
    <label>Updated By</label>
    <length>20</length>
    <type>Text</type>
</CustomField>