Reetan.Nayak Dev 25/force-app/main/default/objects/Authentication__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>User Id</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>