Reetan.Nayak Dev 25/force-app/main/default/objects/Authentication__c/fields/UserRevoked__c.field-meta.xml
<CustomField>
    <fullName>UserRevoked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Revoked</label>
    <type>Checkbox</type>
</CustomField>