Reetan.Nayak Dev 25/force-app/main/default/objects/Authentication__c/fields/UserSuspend__c.field-meta.xml
<CustomField>
    <fullName>UserSuspend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Suspend</label>
    <type>Checkbox</type>
</CustomField>