Reetan.Nayak Dev 25/force-app/main/default/objects/Authentication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Change_Password__c</columns>
    <columns>End_Date__c</columns>
    <columns>Password__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Type__c</columns>
    <columns>UserId__c</columns>
    <columns>UserRevoked__c</columns>
    <columns>UserSuspend__c</columns>
    <columns>Valid_Till__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>